--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -964,7 +964,12 @@
                 <li>Lustrous Liquid Eyeshadow Shade Purple [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
                 <li>Matte Lipstick Shade Nude [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
                 <li>Plumping Lip Gloss Shade White [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
-                <li>Satin Matte Blush Shade Pink [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Events Makeup Banner [Image]. 2022. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Holographic Makeup Line [Image]. 2022. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Rem Beauty Models [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://arianagrande.fandom.com/wiki/R.E.M._Beauty/Gallery</a></li>
+                <li>Ariana Grande Photoshoot 1 [Image]. 2023. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://arianagrande.fandom.com/wiki/R.E.M._Beauty/Gallery</a></li>
+                <li>Ariana Grande Photoshoot 2 [Image]. 2023. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://arianagrande.fandom.com/wiki/R.E.M._Beauty/Gallery</a></li>
+                <li>Ariana Grande Rem Beauty Cover [Image]. 2023. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://arianagrande.fandom.com/wiki/R.E.M._Beauty/Gallery</a></li>
               </ul>
               <h4> Content Writing </h4>
               <ul>
