Linked All products to Available Pages

--- a/product_page_eyeshadow.html
+++ b/product_page_eyeshadow.html
@@ -98,19 +98,19 @@
     <div class="product-reccomendations">
     <div class="product-reccs">
       <a href="product_page_lip.html"> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
-      <h5> Lavander Kiss </h5>
+      <h5 class="product-color"> Lavander Kiss </h5>
       <h4> Essential Drip Lip Oil </h4>
     </div>
 
    <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
-      <h5> Hypernova</h5>
+      <a href="product_page_lip.html"> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
+      <h5  class="product-color"> Hypernova</h5>
       <h4> Satin Matte Blush </h4>
     </div>
 
    <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
-      <h5> On Your Collar </h5>
+      <a href="product_page_lip.html"> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
+      <h5 class="product-color"> On Your Collar </h5>
       <h4> Plumping Lip Gloss</h4>
     </div>
 
