--- a/product_page_lip.html
+++ b/product_page_lip.html
@@ -106,13 +106,13 @@
     </div>
 
    <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
+      <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
       <h5> Hypernova</h5>
       <h4> Satin Matte Blush </h4>
     </div>
 
    <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
+      <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
       <h5> On Your Collar </h5>
       <h4> Plumping Lip Gloss</h4>
     </div>
