Fixed Responsiveness in Checkout Page

--- a/checkout_page.html
+++ b/checkout_page.html
@@ -101,7 +101,7 @@
               </form>
         </section>
 
-        <section class="order-container element-secondary">
+        <section class="order-summary-container element-secondary">
             <section class="element-main">
                 <div>
                     <h2 class="cart-title">Order Summary</h2>
