--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -22,7 +22,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo"/>
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
