Fixed About, Events, Contact  Product

--- a/about_page.html
+++ b/about_page.html
@@ -42,12 +42,12 @@
         </div>
       </div>
 
-      <div class="founder-quote">
-        <div>
-          <img class="about-images-product" src="img/about-us-products.png" alt="A picture of several Nebula Products">
-        </div>
 
-        <div class="about-founder-quote">
+       <div class="founder-quote">
+        <div class="founder-images">
+          <img src="img/about-us-products.png" alt="A picture of several Nebula Products">
+        </div>
+        <div class="about-content-text-founder">
           <h5> FOUNDER QUOTE </h5>
           <h3>“Nebula is about being comfortable with yourself. There is no longer a need to be perfect, just be your most authentic self.” </h3>
           <h5> ADRIANA VENTI </h5>
