--- a/product_page_lip.html
+++ b/product_page_lip.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Product Page</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -30,8 +30,8 @@
       </nav>
     </header>
 
-    <section class="element-main">
-
+  <div class="element-main">
+  <section class="main-product-information">
     <div class="product-information">
       <div class="product-image">
         <a href="product_page_lip.html"> <img src="img/essential-drip-lip-oil.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
@@ -56,18 +56,18 @@
           </div>
         <p> Shade: Lavander Kiss </p>
         <div class="item-add">
-          <input class="quantity-box" type="number" value="1" min="1"/>
+          <input class="quantity-box" type="number" value="1" min="1">
           <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
         </div>
-
         <hr>
           <h4>Product Description </h4>
           <p> Swipe on sheer color, a tantalizing scent & mega glossy shine in no time. our coconut oil-infused bestseller combines the texture of a gloss with the moisturizing benefits of an oil. the cooling metal tip loads up the perfect amount of product—bathing lips in nourishing botanicals and silky-smooth hydration without the stickiness. </p>
-        <hr>
+        <hr> 
           <h4> Ingredients</h4>
           <p> Cocoglycerides, ethylcellulose, caprylic/capric triglyceride, propyl gallate, withania somnifera root extract, flavor (aroma), red 28 lake (ci 45410). </p>
       </div>
     </div>
+  </section>
 
   <section class="product-review-section">
      <div class="overall-review">
@@ -93,40 +93,40 @@
       <h5> Jolene Widjaja </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
       <p> This is amazing! Zero stickiness, long-lasting, and nourishing. Works perfectly to moisturize a bare lips!</p>
-    <div>
+    </div>
   </section>
 
+  <section class="reccomended-products">
     <div class="related-items">
     <h3> Related Items </h3>
-    <div class="product-reccomendations">
-    <div class="product-reccs">
-      <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
-      <h5> Midnight Shadow </h5>
-      <h4> Essential Drip Lip Oil </h4>
-    </div>
+      <div class="product-reccomendations">
+        <div class="product-reccs">
+          <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+          <h5 class="product-color"> Midnight Shadow </h5>
+          <h4> Essential Drip Lip Oil </h4>
+        </div>
 
-   <div class="product-reccs">
-      <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
-      <h5> Hypernova</h5>
-      <h4> Satin Matte Blush </h4>
-    </div>
+        <div class="product-reccs">
+          <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
+          <h5 class="product-color"> Hypernova</h5>
+          <h4> Satin Matte Blush </h4>
+        </div>
 
-   <div class="product-reccs">
-      <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
-      <h5> On Your Collar </h5>
-      <h4> Plumping Lip Gloss</h4>
+        <div class="product-reccs">
+          <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
+          <h5 class="product-color"> On Your Collar </h5>
+          <h4> Plumping Lip Gloss</h4>
+        </div>
+      </div>
     </div>
-
-    </div>
-  </div>
   </section>
-
+</div>
 
 
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
+        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo">
 
         <div class="footer-nav-container">
           <div class="footer-nav">
@@ -141,12 +141,12 @@
 
           <div class="footer-nav">
             <h5 class="footer-title">Guidelines</h5>
-            <a class="footer-link" href="style_guide_page.html #branding_idea">Branding Idea</a>
-            <a class="footer-link" href="style_guide_page.html #interactive_elements"> Interactive Elements</a>
-            <a class="footer-link" href="style_guide_page.html #text_elements">Text Elements</a>
-            <a class="footer-link" href="style_guide_page.html #combined_elements">Combined Elements</a>
-            <a class="footer-link" href="style_guide_page.html #design_guidelines">Design Guidelines</a>
-            <a class="footer-link" href="style_guide_page.html #citation">Citation</a>
+            <a class="footer-link" href="style_guide_page.html#branding_idea">Branding Idea</a>
+            <a class="footer-link" href="style_guide_page.html#interactive_elements"> Interactive Elements</a>
+            <a class="footer-link" href="style_guide_page.html#text_elements">Text Elements</a>
+            <a class="footer-link" href="style_guide_page.html#combined_elements">Combined Elements</a>
+            <a class="footer-link" href="style_guide_page.html#design_guidelines">Design Guidelines</a>
+            <a class="footer-link" href="style_guide_page.html#citation">Citation</a>
           </div>
         </div>
       </div>
