--- a/product_page_lip.html
+++ b/product_page_lip.html
@@ -80,7 +80,7 @@
     <div class="product-review">
       <h5> Meredith Jackie </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
-      <p> Honestly really cheap in comparisson to other lip oils out there. Would reccomend! </p>
+      <p> Honestly really cheap in comparison to other lip oils out there. Would reccomend! </p>
     </div>
 
     <div class="product-review">
