Revert "Merge branch 'main' of github.com:Jesss745/IAT339---P2"
This reverts commit 52ad2a99f26959da1dce067894f1e65e23980b94, reversing
changes made to 0c2712ee9e5a73ab34c3c563f17fec657eb4ec60.

--- a/contact_page.html
+++ b/contact_page.html
@@ -31,6 +31,7 @@
     </header>
 
     <section class="element-main contact-page">
+    <div class="grid element-grid">
       <div class="customer-support">
         <h2> Customer Support </h2>
         <h4> Customer Service Hours </h4>
@@ -63,6 +64,7 @@
       <div class="contact-information">
         <img src="img/instagram-icon.png" alt="Instagram Icon">
         <p>nebula.cosmetics</p>
+      </div>
       </div>
     </div>
 
