--- a/product_page_eyeshadow.html
+++ b/product_page_eyeshadow.html
@@ -30,8 +30,8 @@
       </nav>
     </header>
 
-    <div class="element-main">
-    <section class="main-product-information">
+    <section class="element-main">
+
     <div class="product-information">
       <div class="product-image">
         <a href="product_page_eyeshadow.html"> <img src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
@@ -65,7 +65,6 @@
           <p> Isododecane, calcium aluminum borosilicate, trimethylsiloxysilicate, silica, ribehenate/isostearate/eicosandioate, calcium sodium borosilicate, octyldodecanol, hydrogenated styrene/isoprene copolymer, disteardimonium hectorite, alcohol denat., caprylic/capric triglyceride, polyhydroxystearic acid, polyisoprene, tin oxide, isostearic acid, pentaerythrityl tetra-di-t-butyl hydroxyhydrocinnamate, lecithin, polyglyceryl-3 polyricinoleate, water/aqua/eau, talc, calcium titanium borosilicate, synthetic fluorphlogopite, bht, titanium dioxide (ci 77891), iron oxides (ci 77491/ ci 77492/ ci 77499). </p>
       </div>
     </div>
-  </section>
 
   <section class="product-review-section">
     <div class="overall-review">
@@ -94,31 +93,32 @@
     </div>
   </section>
 
-  <section class="reccomended-products">
     <div class="related-items">
-      <h3> Related Items </h3>
-      <div class="product-reccomendations">
-        <div class="product-reccs">
-          <a href="product_page_lip.html"> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
-          <h5 class="product-color"> Lavander Kiss </h5>
-          <h4> Essential Drip Lip Oil </h4>
-        </div>
-
-        <div class="product-reccs">
-          <a href="product_page_lip.html"> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
-          <h5 class="product-color"> Hypernova</h5>
-          <h4> Satin Matte Blush </h4>
-        </div>
-
-        <div class="product-reccs">
-          <a href="product_page_lip.html"> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
-          <h5 class="product-color"> On Your Collar </h5>
-          <h4> Plumping Lip Gloss</h4>
-        </div>
-      </div>
+    <h3> Related Items </h3>
+    <div class="product-reccomendations">
+    <div class="product-reccs">
+      <a href="product_page_lip.html"> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
+      <h5> Lavander Kiss </h5>
+      <h4> Essential Drip Lip Oil </h4>
     </div>
+
+   <div class="product-reccs">
+      <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
+      <h5> Hypernova</h5>
+      <h4> Satin Matte Blush </h4>
+    </div>
+
+   <div class="product-reccs">
+      <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
+      <h5> On Your Collar </h5>
+      <h4> Plumping Lip Gloss</h4>
+    </div>
+
+    </div>
+  </div>
   </section>
-</div>
+
+
 
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
