--- a/shop_page.html
+++ b/shop_page.html
@@ -65,7 +65,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-                <a href="product_page_lip.html"> <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"> </a>
+                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"> </a>
               </div>
               <h2 class="product-color">Miss Neptune</h2>
               <div>
@@ -110,7 +110,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-              <a href="product_page_lip.html"> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
+              <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
               </div>
               <h2 class="product-color">Eclipse</h2>
               <div>
@@ -126,7 +126,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-                <a href="product_page_lip.html"> <img class="img img-product" src="img/satin-matte-blush.png" alt="A Dark Red Hypernova Matte Lipstick"> </a>
+                <a href=#> <img class="img img-product" src="img/satin-matte-blush.png" alt="A Dark Red Hypernova Matte Lipstick"> </a>
               </div>
               <h2 class="product-color">Hypernova</h2>
               <div>
@@ -142,7 +142,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-                <a href="product_page_lip.html"> <img class="img img-product" src="img/matte-lipstick.png" alt="A Circular Compact Drive in Movie Pink Satin Matte Blush"> </a>
+                <a href=#> <img class="img img-product" src="img/matte-lipstick.png" alt="A Circular Compact Drive in Movie Pink Satin Matte Blush"> </a>
               </div>
               <h2 class="product-color">Drive In Movie</h2>
               <div>
@@ -158,7 +158,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-              <a href="product_page_lip.html"> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
+              <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
               </div>
               <h2 class="product-color">On Your Collar</h2>
               <div>
@@ -174,7 +174,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-                <a href="product_page_lip.html"> <img class="img img-product" src="img/kohl-eyeliner-pencil.png" alt="A White At the Borderline Kohl Eyeliner Pencil"> </a>
+                <a href=#> <img class="img img-product" src="img/kohl-eyeliner-pencil.png" alt="A White At the Borderline Kohl Eyeliner Pencil"> </a>
               </div>
               <h2 class="product-color">At the Borderline</h2>
               <div>
