--- a/about_page.html
+++ b/about_page.html
@@ -43,8 +43,8 @@
       </div>
 
       <div class="founder-quote">
-        <div>
-          <img class="about-images-product" src="img/about-us-products.png" alt="A picture of several Nebula Products">
+        <div class="about-images-product">
+          <img src="img/about-us-products.png" alt="A picture of several Nebula Products">
         </div>
 
         <div class="about-founder-quote">
