--- a/events_page.html
+++ b/events_page.html
@@ -35,10 +35,10 @@
         <img class="event-img" src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
       </figure>
       <div class="event-container">
-        <h4> 20th April 2024 </h4>
-        <h2 class="event-title">SFU Surrey Pop-Up</h2>
-        <p class="event-content">Immerse yourself in the celestial allure of Nebula as you discover our premium makeup collection, meticulously crafted to ignite your inner star.</p>
-        <p class="event-content">Don't miss this opportunity to experience beauty like never before. Visit us at SFU Surrey and let Nebula elevate your makeup game to galactic heights. </p>
+        <h4 class="event-date-surrey"> 20th April 2024 </h4>
+        <h2 class="event-title-surrey">SFU Surrey Pop-Up</h2>
+        <p class="event-surrey">Immerse yourself in the celestial allure of Nebula as you discover our premium makeup collection, meticulously crafted to ignite your inner star.</p>
+        <p class="event-surrey">Don't miss this opportunity to experience beauty like never before. Visit us at SFU Surrey and let Nebula elevate your makeup game to galactic heights. </p>
         <a class="btn btn-primary" href="events_page.html">Sign up for the event</a>
       </div>
     </section>
