Products Fixed + Grid Simplified

--- a/product_page_lip.html
+++ b/product_page_lip.html
@@ -34,7 +34,9 @@
 
     <div class="product-information">
       <div class="product-image">
-        <a href="product_page_lip.html"> <img src="img/essential-drip-lip-oil.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+        <a href="product_page_lip.html"> 
+          <img src="img/essential-drip-lip-oil.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> 
+        </a>
       </div>
 
       <div class="product-details">
