Fixed Images, Validator Check Done

--- a/product_page_eyeshadow.html
+++ b/product_page_eyeshadow.html
@@ -34,7 +34,7 @@
 
     <div class="product-information">
       <div class="product-image">
-        <a href="product_page_eyeshadow.html"> <img src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+        <a href="product_page_eyeshadow.html"> <img class="img-product-single" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
       </div>
 
       <div class="product-details">
