Updated Footer & Added Element Tertiary

--- a/about_page.html
+++ b/about_page.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <section class="about-page">
+    <section class="element-tertiary about-page">
       <div class="about-nebula">
         <div class="about-content-text">
           <h2>About Nebula </h2>
