--- a/contact_page.html
+++ b/contact_page.html
@@ -32,7 +32,7 @@
 
     <section class="element-main contact-page">
     <div class="grid element-grid">
-      <div class="customer-support">
+      <div class="element-tertiary customer-support">
         <h2> Customer Support </h2>
         <h4> Customer Service Hours </h4>
       <div class="service-hours">
