--- a/events_page.html
+++ b/events_page.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <section class="event-section">
+    <section class="element-tertiary event-section">
       <figure>
         <img class="event-img" src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
       </figure>
